tests/ui/rfcs/rfc-2294-if-let-guard/warns.stderr
error: irrefutable `if let` guard pattern
  --> $DIR/warns.rs:6:20
   |
LL |         Some(x) if let () = x => {}
   |                    ^^^^^^^^^^
   |
   = note: this pattern will always match, so the guard is useless
   = help: consider removing the guard and adding a `let` inside the match arm
note: the lint level is defined here
  --> $DIR/warns.rs:3:8
   |
LL | #[deny(irrefutable_let_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/warns.rs:15:25
   |
LL |         x if let None | None = x => {}
   |                  ----   ^^^^ no value can reach this
   |                  |
   |                  matches all the relevant values
   |
note: the lint level is defined here
  --> $DIR/warns.rs:12:8
   |
LL | #[deny(unreachable_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

